--- a/Temas_fisica_moderna/El_gato_de_Schrodinger.html
+++ b/Temas_fisica_moderna/El_gato_de_Schrodinger.html
@@ -72,13 +72,17 @@
         <h2>La Paradoja</h2>
         <p>Según la interpretación de Copenhague, hasta que no se abra la caja y se observe el estado del gato, este
             está tanto vivo como muerto al mismo tiempo, en una superposición de estados. Esto ilustra la aparente
-            contradicción
+            contradicción</p>
+        <p>El gato de Schrödinger - Historias de la ciencia - ACTA. (s/f). Acta.es. Recuperado el 15
+            de abril de 2024, de https://www.acta.es/recursos/baul-de-ciencias-y
+            tecnologia/historias-de-la-ciencia/1-el-gato-de-schroedinger</p>
+    </div>
 
-            <script>
-                function redirigir(ruta) {
-                    window.location.href = ruta;
-                }
-            </script>
+        <script>
+            function redirigir(ruta) {
+                window.location.href = ruta;
+            }
+        </script>
 </body>
 
 </html>
