--- a/Temas_fisica_moderna/Fisica_de_particulas.html
+++ b/Temas_fisica_moderna/Fisica_de_particulas.html
@@ -79,6 +79,11 @@
                 <li>Electrónica: Desarrollo de dispositivos que utilizan semiconductores.</li>
                 <li>Astropartículas: Estudio de rayos cósmicos y neutrinos, enriqueciendo la cosmología.</li>
             </ul>
+            <p>Física de partículas. (s/f). Laguia2000.com. Recuperado el 15 de abril de 2024, de
+                https://fisica.laguia2000.com/dinamica-clasica/dinamica-de-una-particula/fisica-de particulas
+                Gudiña, V. (2023, noviembre 29). Física de partículas. Definición.de; Definicion.de.
+                https://definicion.de/fisica-de-particulas/</p>
+
         </div>
 
 
