--- a/Temas_fisica_moderna/Teoria_de_la_incertidumbre.html
+++ b/Temas_fisica_moderna/Teoria_de_la_incertidumbre.html
@@ -95,6 +95,10 @@
             relaciones fundamentales son pilares de la mecánica cuántica y tienen un impacto significativo en diversos
             fenómenos cuánticos, como la estructura atómica, la emisión de radiación y la conductividad eléctrica en
             materiales.</p>
+        <p>Lizcano, B. C. (2017, junio 28). El Principio de Incertidumbre. ACADEMIA PLAY!
+            https://academiaplay.net/principio-incertidumbre/
+            Mimenza, O. C. (2017, abril 27). El principio de incertidumbre de Heisenberg: ¿qué nos
+            explica? pymOrganization. https://psicologiaymente.com/miscelanea/principio incertidumbre-heisenberg</p>
     </div>
 
     <script>
