--- a/Temas_fisica_moderna/Teoria_de_la_relatividad.html
+++ b/Temas_fisica_moderna/Teoria_de_la_relatividad.html
@@ -70,6 +70,10 @@
         <p>Estas teorías han sido confirmadas por numerosos experimentos y observaciones, y son fundamentales para la
             física moderna, la cosmología y la tecnología, como los sistemas de posicionamiento global (GPS) que
             requieren correcciones relativistas para funcionar con precisión.</p>
+        <p>Leskow, E. C. (s/f). Teoría de la Relatividad - Concepto, utilización e importancia.
+            Recuperado el 15 de abril de 2024, de https://concepto.de/teoria-de-la-relatividad/
+            National Geographic. (2017, mayo 29). Genius: El ascensor de Einstein. La aceleración
+            y la gravedad son la misma cosa. National Geographic.</p>
     </div>
 
     <script>
