--- a/Temas_fisica_moderna/Particulas_subatomicas.html
+++ b/Temas_fisica_moderna/Particulas_subatomicas.html
@@ -89,6 +89,12 @@
         <p>El conocimiento de las partículas subatómicas ha llevado a importantes avances en nuestra comprensión del
             mundo físico y ha tenido aplicaciones prácticas en campos como la medicina, la electrónica y la astrofísica.
         </p>
+        <p>Portillo, G. (2021, noviembre 9). Partículas subatómicas. Meteorología en Red.
+            https://www.meteorologiaenred.com/particulas-subatomicas.html
+            Prieto, P. B. (2022, junio 23). ¿Qué es el Modelo Estándar de la Física de Partículas?
+            Definición y principios. Medicoplus.com. https://medicoplus.com/ciencia/modelo estandar-fisica-particulas
+        </p>
+
     </div>
 
     <script>
