--- a/Temas_optica/Dispositivos_iniciales_y_luz_de_fibras_opticas.html
+++ b/Temas_optica/Dispositivos_iniciales_y_luz_de_fibras_opticas.html
@@ -77,7 +77,7 @@
             largo alcance, la transmisión de señales de televisión y radio, y la medición de variables físicas como la
             temperatura, la presión y los niveles de luz (Equipo editorial, Etecé, 2021).</p>
 
-        <img src=/assets/img/ImagenesFisica/Acustica/Imagen7.jpg alt="Fibras Ópticas">
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen7.png" alt="Prisma">
         <p>(By IA)</p>
     </div>
 
