--- a/Temas_acustica/Vibracion.html
+++ b/Temas_acustica/Vibracion.html
@@ -1,94 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-bs-theme="light" lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vibración en columnas de aire</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        .top-bar {
-            background-color: #333;
-            overflow: hidden;
-        }
-
-        .top-bar a {
-            float: left;
-            display: block;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-        .top-bar a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
-        #vibracion {
-            background-color: black;
-            color: white;
-            text-align: center;
-            font-size: 36px;
-            padding: 10px 0;
-        }
-    </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Vibracion</title>
+    <link rel="stylesheet" href="/assets/css/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
+    <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
+    <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
+   
 </head>
 
 <body>
-    <div class="top-bar">
-        <a href="\Optica.html">Óptica</a>
-        <a href="\Acustica.html">Acústica</a>
-        <a href="\Fisica_moderna.html">Física Moderna</a>
-        <a href="\Conversor.html">Conversor de Unidades</a>
-        <a href="\Sobre_nosotros.html">Sobre Nosotros</a>
-        <a href="\Calculadora.html">Calculadora</a>
-    </div>
-    <div id="vibracion">Vibración en columnas de aire</div>
-    <div>
-        <h2>Vibración en Columnas de Aire</h2>
-        <p>La vibración en columnas de aire es un concepto fundamental en acústica y física, desempeñando un papel
-            crucial en la comprensión de la propagación del sonido y los fenómenos de resonancia. Cuando una columna de
-            aire se pone en vibración, produce ondas sonoras que pueden ser manipuladas y estudiadas para obtener
-            información sobre el comportamiento de las ondas en diferentes medios. Este fenómeno es ampliamente
-            explorado en diversos trabajos científicos, arrojando luz sobre los principios que rigen la interacción
-            entre el sonido y las columnas de aire.</p>
-        <p>Según Fletcher y Rossing (1998), la vibración de las columnas de aire es un tema clave en el campo de la
-            acústica, con implicaciones para instrumentos musicales, acústica arquitectónica y el diseño de sistemas de
-            sonido. Los autores profundizan en las complejidades de cómo las columnas de aire vibran a diferentes
-            frecuencias, lo que lleva a la producción de sonidos distintos. Al estudiar los patrones de vibración de las
-            columnas de aire, los investigadores pueden analizar los armónicos y las frecuencias resonantes que definen
-            el timbre y la calidad del sonido producido.</p>
-        <p>En su investigación, Kinsler et al. (1982) enfatizan la importancia de entender el comportamiento de las
-            columnas de aire en relación con las ondas sonoras. Discuten cómo la longitud y la geometría de una columna
-            de aire influyen en sus modos vibratorios y en el sonido resultante producido. Al manipular la longitud de
-            la columna o cambiar sus condiciones de contorno, los investigadores pueden observar cambios en las
-            frecuencias en las que la columna resuena, proporcionando valiosas ideas sobre la física de la propagación
-            del sonido.</p>
-        <p>Además, Rossing (2007) destaca las aplicaciones prácticas de estudiar la vibración en columnas de aire,
-            especialmente en el contexto de instrumentos musicales. El autor explica cómo instrumentos como flautas,
-            clarinetes y tubos de órgano se basan en los principios de la vibración de la columna de aire para producir
-            tonos y tonalidades específicos. Al ajustar la longitud de la columna de aire o modificar el diseño del
-            instrumento, los músicos pueden controlar la salida de sonido, demostrando la relación directa entre la
-            vibración de la columna de aire y la expresión musical.</p>
-        <p>Fletcher, N. H., & Rossing, T. D. (1998). The Physics of Musical Instruments. Springer.
-            Kinsler, L. E., Frey, A. R., Coppens, A. B., & Sanders, J. V. (1982). Fundamentals of Acoustics. John Wiley
-            & Sons.
-            Rossing, T. D. (2007). Springer Handbook of Acoustics. Springer. </p>
-
-    </div>
-
-    <script>
-        function redirigir(ruta) {
-            window.location.href = ruta;
-        }
-    </script>
-</body>
-
-</html>
+    <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
+                        <path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"></path>
+                        <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
+                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-5">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link active" href="\Optica.html">Optica</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="\Acustica.html">Acustica</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="\Fisica_moderna.html">Fisica Moderna</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="\Conversor.html">Conversor de Unidades</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="\Sobre_nosotros.html">Sobre nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="\Calculadora.html">Calculadora</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container py-4 py-xl-5">
+        <div style="background-image:url(&quot;/assets/img/Fondo_Acustica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
+            <div class="d-flex justify-content-center align-items-center" style="height: inherit;min-height: initial;width: 100%;position: absolute;left: 0;background-color: rgba(30,41,99,0.53);">
+                <div class="d-flex align-items-center order-5" style="height:200px;">
+                    <div class="container">
+                        <h1 class="text-center" style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">VIBRACION</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p class="text-break"><h2>Vibración en Columnas de Aire</h2>
+            <p>La vibración en columnas de aire es un concepto fundamental en acústica y física, desempeñando un papel
+                crucial en la comprensión de la propagación del sonido y los fenómenos de resonancia. Cuando una columna de
+                aire se pone en vibración, produce ondas sonoras que pueden ser manipuladas y estudiadas para obtener
+                información sobre el comportamiento de las ondas en diferentes medios. Este fenómeno es ampliamente
+                explorado en diversos trabajos científicos, arrojando luz sobre los principios que rigen la interacción
+                entre el sonido y las columnas de aire.</p>
+            <p>Según Fletcher y Rossing (1998), la vibración de las columnas de aire es un tema clave en el campo de la
+                acústica, con implicaciones para instrumentos musicales, acústica arquitectónica y el diseño de sistemas de
+                sonido. Los autores profundizan en las complejidades de cómo las columnas de aire vibran a diferentes
+                frecuencias, lo que lleva a la producción de sonidos distintos. Al estudiar los patrones de vibración de las
+                columnas de aire, los investigadores pueden analizar los armónicos y las frecuencias resonantes que definen
+                el timbre y la calidad del sonido producido.</p>
+            <p>En su investigación, Kinsler et al. (1982) enfatizan la importancia de entender el comportamiento de las
+                columnas de aire en relación con las ondas sonoras. Discuten cómo la longitud y la geometría de una columna
+                de aire influyen en sus modos vibratorios y en el sonido resultante producido. Al manipular la longitud de
+                la columna o cambiar sus condiciones de contorno, los investigadores pueden observar cambios en las
+                frecuencias en las que la columna resuena, proporcionando valiosas ideas sobre la física de la propagación
+                del sonido.</p>
+            <p>Además, Rossing (2007) destaca las aplicaciones prácticas de estudiar la vibración en columnas de aire,
+                especialmente en el contexto de instrumentos musicales. El autor explica cómo instrumentos como flautas,
+                clarinetes y tubos de órgano se basan en los principios de la vibración de la columna de aire para producir
+                tonos y tonalidades específicos. Al ajustar la longitud de la columna de aire o modificar el diseño del
+                instrumento, los músicos pueden controlar la salida de sonido, demostrando la relación directa entre la
+                vibración de la columna de aire y la expresión musical.</p></p>
