--- a/Temas_optica/Espectro_electromagnetico.html
+++ b/Temas_optica/Espectro_electromagnetico.html
@@ -9,21 +9,31 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
-                        <path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"></path>
-                        <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
-                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span
+                    class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg
+                        xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
+                        viewBox="0 0 16 16" class="bi bi-bezier">
+                        <path fill-rule="evenodd"
+                            d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z">
+                        </path>
+                        <path
+                            d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z">
+                        </path>
+                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" class="navbar-toggler"
+                data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span
+                    class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="\Optica.html">Optica</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Acustica.html">Acustica</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Fisica_moderna.html">Fisica Moderna</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Conversor.html">Conversor de Unidades</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="\Conversor.html">Conversor de Unidades</a>
+                    </li>
                     <li class="nav-item"><a class="nav-link active" href="\Sobre_nosotros.html">Sobre nosotros</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Calculadora.html">Calculadora</a></li>
                 </ul>
@@ -31,13 +41,60 @@
         </div>
     </nav>
     <div class="container py-4 py-xl-5">
-        <div style="background-image:url(&quot;/assets/img/Fondo_Optica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
-            <div class="d-flex justify-content-center align-items-center" style="height: inherit;min-height: initial;width: 100%;position: absolute;left: 0;background-color: rgba(30,41,99,0.53);">
+        <div
+            style="background-image:url(&quot;/assets/img/Fondo_Optica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
+            <div class="d-flex justify-content-center align-items-center"
+                style="height: inherit;min-height: initial;width: 100%;position: absolute;left: 0;background-color: rgba(30,41,99,0.53);">
                 <div class="d-flex align-items-center order-5" style="height:200px;">
                     <div class="container">
-                        <h1 class="text-center" style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">ESPECTRO ELECTROMAGNETICO</h1>
+                        <h1 class="text-center"
+                            style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">
+                            ESPECTRO ELECTROMAGNETICO</h1>
                     </div>
                 </div>
             </div>
         </div>
-        <p class="text-break">mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm</p>
+        <h2>Espectro electromagnético</h2>
+        <p>El espectro electromagnético es la distribución de energías de las radiaciones electromagnéticas. Puede
+            expresarse en términos de energía, pero se expresa más comúnmente en términos de longitud de onda y
+            frecuencias de las radiaciones. Se extiende desde las radiaciones de longitud de onda más corta (rayos
+            gamma) hasta las de longitud de onda más larga (ondas de radio) (Leskow, 2021). El espectro electromagnético
+            está compuesto por diversos subrangos o porciones, cuyos límites no están bien definidos y tienden a
+            superponerse. Cada región del espectro se distingue de las demás por el comportamiento de sus ondas durante
+            la emisión, transmisión y absorción, así como por sus aplicaciones prácticas. Las ondas electromagnéticas
+            son vibraciones de campos eléctricos y magnéticos que transportan energía. Estas ondas se propagan en el
+            vacío a la velocidad de la luz. Cuando nos referimos al espectro electromagnético de un objeto, nos
+            referimos a las diferentes longitudes de onda que emite (espectro de emisión) o absorbe (espectro de
+            absorción), generando una distribución de energía en forma de un conjunto de ondas electromagnéticas. Las
+            características de esta distribución dependen de la frecuencia o longitud de onda de las oscilaciones, así
+            como de su energía (Leskow, 2021). Las tres cantidades están asociadas entre sí: una determinada longitud de
+            onda corresponde a una determinada frecuencia y energía. Las ondas electromagnéticas pueden asociarse con
+            una partícula llamada fotón. El espectro electromagnético fue descubierto como resultado de los experimentos
+            y aportes del físico británico James Maxwell, quien descubrió la presencia de ondas electromagnéticas y
+            formalizó las ecuaciones para su estudio (conocidas como ecuaciones de Maxwell) (Leskow, 2021). El espectro
+            electromagnético se puede dividir en diferentes regiones, conocidas como bandas o segmentos, de longitudes
+            de onda más cortas a más largas:</p>
+        <li>Rayos gamma: con longitud de onda inferior a 10^-11 metros (m) y frecuencia superior a 10^19.</li>
+        <li>Rayos X: con longitud de onda inferior a 10^-8 m y frecuencia superior a 10^16.</li>
+        <li>Radiación ultravioleta: con una longitud de onda inferior a 10^-8 m y una frecuencia superior a 1,5x10^15.
+        </li>
+        <li>Luz visible: con una longitud de onda inferior a 780x10^-9 m y una frecuencia superior a 384x10^12.</li>
+        <li>Radiación infrarroja: con una longitud de onda inferior a 2,5x10^-6 m y una frecuencia superior a 120x10^12.
+        </li>
+        : con longitud de onda inferior a 10^-2 m y frecuencia superior a 3x10^8.</li>
+        <li>Ondas de radio: con una longitud de onda inferior a 1 m y una frecuencia superior a 300x10^6.</li>
+        </ul>
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen1.png" alt="imagen 1” >
+        <p>(Leskow, 2021)</p>
+        <p>Las regiones del espectro electromagnético son los rayos gamma, los rayos X, la radiación ultravioleta, la luz visible, las microondas y las ondas de radio. Los usos del espectro electromagnético son diversos. Por ejemplo:
+        <ul>
+        <li>Ondas de radio: utilizadas para transmitir información a través del aire, como señales de radio, televisión o Wi-Fi.</li>  
+        <li>Microondas: se utilizan para transmitir información, como señales o antenas de teléfonos móviles (celulares), y para calentar alimentos en hornos microondas.</li>
+        <li>Radiación ultravioleta: emitida por el Sol y absorbida por las plantas para la fotosíntesis, así como por nuestra piel cuando nos bronceamos. También alimenta tubos fluorescentes y permite la existencia de instalaciones como solariums.</li>
+        <li>Radiación infrarroja: transmite el calor del Sol a nuestro planeta, de un fuego a los objetos que lo rodean, o de un calentador al interior de nuestras habitaciones.</li>
+        <li>Luz visible: hace visibles las cosas. También se puede utilizar para otros mecanismos visuales como cine, linternas, etc.</li>
+        <li>Rayos X: se utilizan en medicina para tomar imágenes visuales del interior de nuestro cuerpo, como de nuestros huesos, mientras que los rayos gamma, mucho más violentos, se utilizan como forma de radioterapia o tratamiento contra el cáncer, ya que destruyen el ADN de las células. que se reproducen desordenadamente.</li>
+        </ul>
+        El espectro electromagnético es un rango continuo y prácticamente infinito, pero hasta ahora hemos podido conocer algunas de sus regiones, conocidas como bandas o segmentos. Estas regiones son, de longitudes de onda más cortas a más largas: rayos gamma, rayos X, radiación ultravioleta, luz visible, radiación infrarroja, microondas y ondas de radio. Cada región tiene diferentes propiedades y usos, y se distingue por el comportamiento de sus ondas durante la emisión, transmisión y absorción. El espectro electromagnético es un concepto fundamental en física y tiene numerosas aplicaciones en diversos campos, desde la medicina hasta las telecomunicaciones.</p>
+        </div>
+        
