--- a/Temas_acustica/Cuerpo_elastico.html
+++ b/Temas_acustica/Cuerpo_elastico.html
@@ -78,4 +78,8 @@
                 estructuras.</p>
             <p>En biología, los cuerpos elásticos se utilizan en el estudio de la mecánica de los organismos vivos, como
                 músculos, huesos y tendones. La elasticidad de estos tejidos juega un papel crucial en su capacidad para
-                funcionar correctamente, desde el movimiento y la locomoción hasta el crecimiento y desarrollo.</p></p>
+                funcionar correctamente, desde el movimiento y la locomoción hasta el crecimiento y desarrollo.</p>
+                <p>Halliday, D., Resnick, R., & Walker, J. (2014). Fundamentals of Physics (10th ed.). Wiley.
+                    Kleppner, D., & Kolenkow, R. J. (2010). An Introduction to Mechanics (3rd ed.). Cambridge University Press.
+                </p>
+        </p>
