--- a/Temas_acustica/Ley_de_hooke.html
+++ b/Temas_acustica/Ley_de_hooke.html
@@ -63,4 +63,12 @@
                 tener en cuenta que la Ley de Hooke solo se aplica a pequeños desplazamientos, y que el comportamiento de
                 los resortes y otros materiales elásticos puede volverse más complejo en desplazamientos más grandes
                 (Serway, Faughn, & Vuille, 2008). Su simplicidad y generalidad la han convertido en un concepto fundamental
-                en la física y la ingeniería, y sigue siendo objeto de investigación e investigación continua.</p></p>
+                en la física y la ingeniería, y sigue siendo objeto de investigación e investigación continua.</p>
+                <p>Feynman, R. P., Leighton, R. B., & Sands, M. (1963). The Feynman Lectures on Physics: Volume I.
+                    Addison-Wesley.
+                    Hooke, R. (1678). A Description of Helioscopes, and Some Other Instruments for the More Exact Observation of
+                    the
+                    Sun. Royal Society of London.
+                    Serway, R. A., Faughn, J. S., & Vuille, C. (2008). College Physics: A Strategic Approach. Cengage Learning.
+                </p>
+            </p>
