--- a/Temas_acustica/Ley_inverso.html
+++ b/Temas_acustica/Ley_inverso.html
@@ -58,4 +58,7 @@
                 extienden su influencia en todas las direcciones por igual, sin límite de alcance. Por ejemplo, en el caso
                 del campo gravitatorio, la aceleración de la gravedad es una expresión de la intensidad del campo
 
-                auditorios (HyperPhysics).</p></p>
+                auditorios (HyperPhysics).</p>
+                <p>Sonido, Ley del Inverso del Cuadrado. (s. f.). HyperPhysics. Recuperado de
+                    http://hyperphysics.phy-astr.gsu.edu/hbasees/Acoustic/invsqs.html</p>
+            </p>
