--- a/Temas_acustica/Movimiento_periodico.html
+++ b/Temas_acustica/Movimiento_periodico.html
@@ -70,4 +70,11 @@
                 mecanismo de excitación (Hall, 2013).</p>
             <p>Otro ejemplo es la vibración de una columna de aire en un instrumento de viento, como una flauta o un
                 clarinete. En este caso, el movimiento periódico lo generan la lengüeta o los labios, que periódicamente
-                interrumpen el flujo de aire y hacen que la columna de aire vibre (McIntyre & Woodhouse, 2018).</p></p>
+                interrumpen el flujo de aire y hacen que la columna de aire vibre (McIntyre & Woodhouse, 2018).</p>
+                <p>Hall, DE (2013). Acústica musical: una introducción. Saltador.
+                    Serway, RA y Jewett, JW (2014). Física para científicos e ingenieros (9ª ed.). Brooks/Cole.
+                    Rossing, TD (2007). La ciencia del sonido (4ª ed.). Saltador.
+                    Fletcher, NH y Rossing, TD (2019). La física de los instrumentos musicales (2ª ed.). Saltador.
+                    McIntyre, CR y Woodhouse, J. (2018). La física de los instrumentos de viento. Saltador. </p>
+        
+        </p>
