--- a/Temas_acustica/Vibracion.html
+++ b/Temas_acustica/Vibracion.html
@@ -64,4 +64,9 @@
                 clarinetes y tubos de órgano se basan en los principios de la vibración de la columna de aire para producir
                 tonos y tonalidades específicos. Al ajustar la longitud de la columna de aire o modificar el diseño del
                 instrumento, los músicos pueden controlar la salida de sonido, demostrando la relación directa entre la
-                vibración de la columna de aire y la expresión musical.</p></p>
+                vibración de la columna de aire y la expresión musical.</p>
+                <p>Fletcher, N. H., & Rossing, T. D. (1998). The Physics of Musical Instruments. Springer.
+                    Kinsler, L. E., Frey, A. R., Coppens, A. B., & Sanders, J. V. (1982). Fundamentals of Acoustics. John Wiley
+                    & Sons.
+                    Rossing, T. D. (2007). Springer Handbook of Acoustics. Springer. </p>
+            </p>
