--- a/Temas_fisica_moderna/El_gato_de_Schrodinger.html
+++ b/Temas_fisica_moderna/El_gato_de_Schrodinger.html
@@ -61,3 +61,7 @@
             <p>Según la interpretación de Copenhague, hasta que no se abra la caja y se observe el estado del gato, este
                 está tanto vivo como muerto al mismo tiempo, en una superposición de estados. Esto ilustra la aparente
                 contradicción</p>
+            
+                <p>El gato de Schrödinger - Historias de la ciencia - ACTA. (s/f). Acta.es. Recuperado el 15
+                    de abril de 2024, de https://www.acta.es/recursos/baul-de-ciencias-y
+                    tecnologia/historias-de-la-ciencia/1-el-gato-de-schroedinger</p>
