--- a/Temas_fisica_moderna/Fisica_cuantica.html
+++ b/Temas_fisica_moderna/Fisica_cuantica.html
@@ -73,4 +73,18 @@
             <p>Interpretación: A pesar de su éxito predictivo, la interpretación de la mecánica cuántica sigue siendo un
                 tema de debate.</p>
             <p>Realidad Cuántica: La relación entre la mecánica cuántica y la realidad es compleja y desafía nuestra
-                intuición.</p></p>
+                intuición.</p>
+                <p>del Mar, M. (2023, 3 de febrero). Acelerador de Partículas - Qué es y para qué sirve un
+                    acelerador de partículas . espaciociencia.com; TENDENCIAS.
+                    https://espaciociencia.com/acelerador-de-particulas/
+                    Departamento de Física Cuántica y Fotónica . (s/f). Instituto de Física - UNAM, México.
+                    Recuperado el 15 de abril de 2024, de
+                    https://www.fisica.unam.mx/investigacion/departamentos/fisica_cuantica_y_fotonic
+                    a/?lang=e
+                    ¿Qué es la teoría cuántica? (2023, febrero 9). National Geographic.
+                    https://www.nationalgeographicla.com/ciencia/2023/02/que-es-la-teoria-cuantica
+                    ¿Qué son los aceleradores de partículas? (2024, enero 3). Iaea.org.
+                    https://www.iaea.org/es/bulletin/que-son-los-aceleradores-de-particulas
+                    Zapata, F. (2020, agosto 24). Partículas subatómicas. Lifeder.</p>
+            
+            </p>
