--- a/Temas_fisica_moderna/Fisica_de_particulas.html
+++ b/Temas_fisica_moderna/Fisica_de_particulas.html
@@ -64,4 +64,10 @@
                 <li>Medicina: Técnicas de diagnóstico como la tomografía por emisión de positrones (PET) y tratamientos
                     como la terapia de protones.</li>
                 <li>Electrónica: Desarrollo de dispositivos que utilizan semiconductores.</li>
-                <li>Astropartículas: Estudio de rayos cósmicos y neutrinos, enriqueciendo la cosmología.</li></p>
+                <li>Astropartículas: Estudio de rayos cósmicos y neutrinos, enriqueciendo la cosmología.</li>
+            </p>
+
+            <p> https://fisica.laguia2000.com/dinamica-clasica/dinamica-de-una-particula/fisica-de particulas
+                Gudiña, V. (2023, noviembre 29). Física de partículas. Definición.de; Definicion.de.
+                https://definicion.de/fisica-de-particulas/</p>
+        </p>
