--- a/Temas_fisica_moderna/Introduccion_a_la_fisica.html
+++ b/Temas_fisica_moderna/Introduccion_a_la_fisica.html
@@ -66,4 +66,9 @@
                 fundamentales que gobiernan el universo, con intrincados modelos matemáticos y validación experimental que
                 traspasan los límites del conocimiento y la comprensión humanos.
             </p>
+            <p>Barriga-Carrasco, MD, Zafra, JM, Lekuona, AZ, Botana, JMS, Sanz, M., Artés, SM,
+                Tejada, PC, de Morais Smith, C., Scarpa, G., Pendás, Á. M., Mezquita, MJC, Martí Vidal, I., Milla, FJT,
+                Edelstein, J., & González, AC (s/f). Física cuántica Noticias,
+                Investigación y Análisis. La conversación . Recuperado el 15 de abril de 2024, de
+                https://theconversation.com/es/topics/fisica-cuantica-68767</p>
         </p>
