--- a/Temas_acustica/Conceptos_basicos.html
+++ b/Temas_acustica/Conceptos_basicos.html
@@ -66,4 +66,7 @@
                 longitud de onda es inversamente proporcional a la frecuencia y se mide en unidades de metros (m) u
                 cualquier otra unidad de longitud. La longitud de onda de una onda acústica está relacionada con su
                 frecuencia y la velocidad del sonido en el medio a través de la ecuación λ = c/f, donde λ es la longitud de
-                onda, c es la velocidad del sonido, y f es la frecuencia (Kinsler et al., 2012).</p></p>
+                onda, c es la velocidad del sonido, y f es la frecuencia (Kinsler et al., 2012).</p>
+                <p>Fahy, F. J. (2014). Fundamentals of acoustics (5th ed.). Wiley.</p>
+                <p>Kinsler, L. E., Frey, A. R., Coppens, A. B., & Sanders, J. V. (2012). Fundamentals of acoustics: An
+                    introduction to physics and engineering principles (5th ed.).</p></p>
