--- a/Temas_acustica/Historia_acustica.html
+++ b/Temas_acustica/Historia_acustica.html
@@ -59,4 +59,7 @@
                 utilizada en diversos campos como la arquitectura, la música, la ingeniería de sonido y la medicina.
                 Mediante técnicas avanzadas, se busca mejorar la calidad del sonido en espacios cerrados, diseñar
                 instrumentos musicales más eficientes y realizar diagnósticos médicos más precisos. La investigación en
-                acústica continúa siendo dinámica, con constantes avances y descubrimientos.</p></p>
+                acústica continúa siendo dinámica, con constantes avances y descubrimientos.</p>
+                <p>Kinsler, L. E., Frey, A. R., Coppens, A. B., & Sanders, J. V. (2012). Fundamentals of acoustics: An
+                    introduction to physics and engineering principles (5th ed.).</p>
+            </p>
