--- a/Temas_acustica/Ondas.html
+++ b/Temas_acustica/Ondas.html
@@ -60,4 +60,7 @@
                 puede aprovechar para diversas aplicaciones, como en comunicación inalámbrica, imágenes médicas y
                 transmisión de energía. Por ejemplo, las ondas de radio se utilizan en la comunicación inalámbrica para
                 transmitir información a largas distancias, mientras que las ondas infrarrojas se utilizan en los controles
-                remotos para enviar señales entre dispositivos.</p></p>
+                remotos para enviar señales entre dispositivos.</p>
+                <p>The Physics Classroom. (n.d.). Electromagnetic Waves. Retrieved from
+                    https://www.physicsclassroom.com/class/waves/Lesson-4/Electromagnetic-Waves</p>
+            </p>
